--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
   padding: 0;
   margin: 0;
   font-family: sans-serif;
-  background-color: #1E3D47;
 }
 
 header .header-container {
   display: flex;
   justify-content: space-between;
+  background-color: #1E3D47;
 }
 header .header-container h1 {
   color: #1ABC9C;
@@ -21,4 +21,26 @@ header .header-container #notification {
   border: 0px;
   border-radius: 5px;
   margin: 10px 0px;
+}
+
+main {
+  background-color: white;
+  height: 100%;
+}
+main .map-area {
+  margin: 20px 0px;
+}
+main .call-area {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main .call-area button {
+  background-color: #1ABC9C;
+  border: 0px;
+  border-radius: 35px;
+  width: 201px;
+  height: 35px;
+  margin: 5px 0px;
+  color: white;
 }/*# sourceMappingURL=style.css.map */
