--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header .header-container #notification {
   border: 0px;
   border-radius: 5px;
   margin: 10px 0px;
+  cursor: pointer;
 }
 
 main {
@@ -28,7 +29,7 @@ main {
   height: 100%;
 }
 main .map-area {
-  margin: 20px 0px;
+  margin: 30px 0px;
 }
 main .call-area {
   display: flex;
@@ -39,8 +40,9 @@ main .call-area button {
   background-color: #1ABC9C;
   border: 0px;
   border-radius: 35px;
-  width: 201px;
+  width: 175px;
   height: 35px;
   margin: 5px 0px;
   color: white;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
