--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,7 @@ header{
             border: 0px;
             border-radius: 5px;
             margin: 10px 0px;
+            cursor: pointer;
         }
     }
 }
@@ -29,7 +30,7 @@ main{
     background-color: white;
     height: 100%;
     .map-area{
-        margin: 20px 0px;
+        margin: 30px 0px;
     }
     .call-area{
         display: flex;
@@ -39,10 +40,11 @@ main{
             background-color: #1ABC9C;
             border: 0px;
             border-radius: 35px;
-            width: 201px;
+            width: 175px;
             height: 35px;
             margin: 5px 0px;
             color: white;
+            cursor: pointer;
         }
     }
 }
