--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,11 @@ header{
             border-radius: 5px;
             margin: 10px 0px;
             cursor: pointer;
+            img{
+                width: 20px;
+                height: 15px;
+                margin: 0px 8px;
+            }
         }
     }
 }
