--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header .header-container #notification {
 header .header-container #notification img {
   width: 20px;
   height: 15px;
-  margin: 0px 8px;
+  margin: 0px 7px;
 }
 
 main {
@@ -34,6 +34,8 @@ main {
   height: 100%;
 }
 main .map-area {
+  display: flex;
+  justify-content: center;
   margin: 30px 0px;
 }
 main .call-area {
