--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@ header{
             img{
                 width: 20px;
                 height: 15px;
-                margin: 0px 8px;
+                margin: 0px 7px;
             }
         }
     }
@@ -35,7 +35,9 @@ main{
     background-color: white;
     height: 100%;
     .map-area{
-        margin: 30px 0px;
+       display: flex;
+       justify-content: center;
+       margin: 30px 0px;
     }
     .call-area{
         display: flex;
