[STYLE] modificações no tamanho do elemento e comentário no js

--- a/app/form/form.css
+++ b/app/form/form.css
@@ -7,6 +7,7 @@ aside .form-area {
 }
 aside .form-area button {
   width: 150px;
+  height: 20px;
   border: none;
   margin: 5px 0px;
   background-color: #1ABC9C;
