--- a/app/form/form.scss
+++ b/app/form/form.scss
@@ -7,6 +7,7 @@ aside{
         margin: 15px 0px;
     button{
         width: 150px;
+        height: 20px;
         border: none;
         margin: 5px 0px;
         background-color: #1ABC9C;
