--- a/app/form/form.scss
+++ b/app/form/form.scss
@@ -15,3 +15,19 @@ aside{
     }
     }
 }
+
+.emergencial-area-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    #red-button{
+        width: 150px;
+        height: 20px;
+        border: none;
+        margin: 5px 0px;
+        background-color: #bc1a1a;
+        color: white;
+        border-radius: 5px;
+    }
+}
