--- a/app/form/form.css
+++ b/app/form/form.css
@@ -20,12 +20,23 @@ aside .form-area button {
   justify-content: center;
   align-items: center;
 }
+.emergencial-area-form #nome-client {
+  width: 250px;
+  height: 20px;
+}
+.emergencial-area-form #problem-report {
+  width: 250px;
+  height: 180px;
+}
 .emergencial-area-form #red-button {
   width: 150px;
   height: 20px;
   border: none;
-  margin: 5px 0px;
+  margin: 10px 0px;
   background-color: #bc1a1a;
   color: white;
   border-radius: 5px;
+}
+.emergencial-area-form .checklist {
+  margin: 10px 0px 5px;
 }/*# sourceMappingURL=form.css.map */
