--- a/app/form/form.css
+++ b/app/form/form.css
@@ -1,3 +1,13 @@
+aside #back {
+  width: 100px;
+  height: 20px;
+  border: none;
+  margin: 15px 10px;
+  background-color: #1ABC9C;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+}
 aside .form-area {
   display: flex;
   flex-direction: column;
@@ -21,23 +31,8 @@ aside .form-area button {
   background-color: #1ABC9C;
   border-radius: 5px;
   color: white;
+  cursor: pointer;
 }
 aside .form-area .checklist {
   margin: 10px 0px 5px;
-}
-
-.emergencial-area-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.emergencial-area-form #red-button {
-  width: 150px;
-  height: 20px;
-  border: none;
-  margin: 10px 0px;
-  background-color: #bc1a1a;
-  color: white;
-  border-radius: 5px;
 }/*# sourceMappingURL=form.css.map */
