--- a/app/style.css
+++ b/app/style.css
@@ -6,13 +6,14 @@
 
 header .header-container {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
   background-color: #1E3D47;
 }
 header .header-container h1 {
   color: #1ABC9C;
   font-size: large;
-  margin: 10px 0px;
+  margin: 10px 50px 10px 0px;
 }
 header .header-container #notification {
   background-color: #1ABC9C;
@@ -22,11 +23,13 @@ header .header-container #notification {
   border-radius: 5px;
   margin: 10px 0px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 header .header-container #notification img {
   width: 20px;
   height: 15px;
-  margin: 0px 7px;
 }
 
 main {
