--- a/app/style.scss
+++ b/app/style.scss
@@ -7,12 +7,13 @@
 header{ 
     .header-container{
         display: flex;
-        justify-content: space-between;
+        align-items: center;
+        justify-content: center;
         background-color: #1E3D47;
         h1{
             color: #1ABC9C;
             font-size: large;
-            margin: 10px 0px;
+            margin: 10px 50px 10px 0px;
         }
         #notification{
             background-color: #1ABC9C;
@@ -22,10 +23,12 @@ header{
             border-radius: 5px;
             margin: 10px 0px;
             cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             img{
                 width: 20px;
                 height: 15px;
-                margin: 0px 7px;
             }
         }
     }
