--- a/app/form/form.scss
+++ b/app/form/form.scss
@@ -15,15 +15,15 @@ aside{
         justify-content: center;
         align-items: center;
         margin: 15px 0px;
-        #nome-client{
+        #Identificador{
             width: 250px;
             height: 20px;
         }
-        #problem-report{
+        #problema{
             width: 250px;
             height: 180px;
         }
-         button{
+        button{
         width: 150px;
         height: 20px;
         border: none;
