[STYLE] estilização e criação de uma div para receber os dados do formulário

--- a/app/form/form.scss
+++ b/app/form/form.scss
@@ -15,7 +15,7 @@ aside{
         justify-content: center;
         align-items: center;
         margin: 15px 0px;
-        #Identificador{
+        #identificador{
             width: 250px;
             height: 20px;
         }
