--- a/app/style.css
+++ b/app/style.css
@@ -13,7 +13,7 @@ header .header-container {
 header .header-container h1 {
   color: #1ABC9C;
   font-size: large;
-  margin: 10px 50px 10px 0px;
+  margin: 10px 0px;
 }
 header .header-container #notification {
   background-color: #1ABC9C;
@@ -55,6 +55,19 @@ main .call-area button {
   margin: 5px 0px;
   color: white;
   cursor: pointer;
+}
+main #chamados {
+  flex-direction: column;
+  border: 1px solid black;
+  width: 220px;
+}
+main #chamados h2 {
+  margin: 10px 0px;
+  color: #1ABC9C;
+  text-decoration: underline;
+}
+main #chamados p {
+  margin: 5px 0px;
 }
 
 footer {
