--- a/app/form/form.css
+++ b/app/form/form.css
@@ -15,7 +15,7 @@ aside .form-area {
   align-items: center;
   margin: 15px 0px;
 }
-aside .form-area #Identificador {
+aside .form-area #identificador {
   width: 250px;
   height: 20px;
 }
