--- a/app/style.scss
+++ b/app/style.scss
@@ -59,8 +59,9 @@ main{
     }
     #chamados{
         flex-direction: column;
-        border: 1px solid black;
-        width: 220px;
+        width: 310px;
+        padding: 5px;
+        align-items: center;
         h2{
             margin: 10px 0px;
             color: #1ABC9C;
