[FEAT] remodelação do projeto

--- a/app/style.css
+++ b/app/style.css
@@ -4,11 +4,15 @@
   font-family: sans-serif;
 }
 
+body {
+  background-color: #1E3D47;
+}
+
 header .header-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #1E3D47;
+  background-color: #112227;
 }
 header .header-container h1 {
   color: #1ABC9C;
@@ -32,12 +36,48 @@ header .header-container #notification img {
   height: 15px;
 }
 
+.login-area {
+  color: #1ABC9C;
+  display: flex;
+  background-color: #1E3D47;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.login-area input {
+  background-color: white;
+  border-radius: 5px;
+  border: 1px white solid;
+  margin: 10px 0px;
+  height: 20px;
+}
+.login-area label {
+  font-size: large;
+}
+.login-area #log-button {
+  background-color: #1ABC9C;
+  width: 100px;
+  height: 30px;
+  border: 1px #1ABC9C solid;
+  border-radius: 10px;
+  font-size: large;
+  color: white;
+}
+.login-area #log-button:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 main {
   background-color: white;
   height: 100%;
+  display: none;
 }
 main .map-area {
-  display: flex;
+  display: none;
   justify-content: center;
   margin: 30px 0px;
 }
