--- a/app/style.css
+++ b/app/style.css
@@ -4,10 +4,6 @@
   font-family: sans-serif;
 }
 
-body {
-  background-color: #1E3D47;
-}
-
 header .header-container {
   display: flex;
   align-items: center;
@@ -39,18 +35,20 @@ header .header-container #notification img {
 .login-area {
   color: #1ABC9C;
   display: flex;
-  background-color: #1E3D47;
   flex-direction: column;
   align-items: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  border: 3px solid #1E3D47;
+  padding: 10px;
+  border-radius: 15px;
 }
 .login-area input {
   background-color: white;
   border-radius: 5px;
-  border: 1px white solid;
+  border: 1px black solid;
   margin: 10px 0px;
   height: 20px;
 }
@@ -67,26 +65,26 @@ header .header-container #notification img {
   color: white;
 }
 .login-area #log-button:hover {
-  text-decoration: underline;
+  -webkit-text-decoration: underline black;
+          text-decoration: underline black;
   cursor: pointer;
 }
 
 main {
   background-color: white;
   height: 100%;
+  width: 100%;
   display: none;
+  flex-direction: column;
 }
 main .map-area {
-  display: none;
-  justify-content: center;
-  margin: 30px 0px;
-}
-main .call-area {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin: 30px 0px;
 }
-main .call-area button {
+main .map-area button {
   background-color: #1ABC9C;
   border: 0px;
   border-radius: 35px;
