--- a/app/style.scss
+++ b/app/style.scss
@@ -4,10 +4,6 @@
     font-family: sans-serif;
 }
 
-body{
-    background-color: #1E3D47;
-}
-
 header{ 
     .header-container{
         display: flex;
@@ -41,17 +37,19 @@ header{
 .login-area{
     color: #1ABC9C;
     display: flex;
-    background-color: #1E3D47;
     flex-direction: column;
     align-items: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border: 3px solid #1E3D47;
+    padding: 10px;
+    border-radius: 15px;
     input{
         background-color: white;
         border-radius: 5px;
-        border: 1px white solid;
+        border: 1px black solid;
         margin: 10px 0px;
         height: 20px;
     }
@@ -68,7 +66,7 @@ header{
         color: white;
     }
     #log-button:hover{
-        text-decoration: underline;
+        text-decoration: underline black;
         cursor: pointer;
     }
 }
@@ -76,27 +74,26 @@ header{
 main{
     background-color: white;
     height: 100%;
+    width: 100%;
     display: none;
+    flex-direction: column;
     .map-area{
-       display: none;
-       justify-content: center;
-       margin: 30px 0px;
-    }
-    .call-area{
         display: flex;
+        justify-content: center;
         flex-direction: column;
         align-items: center;
-        button{
-            background-color: #1ABC9C;
-            border: 0px;
-            border-radius: 35px;
-            width: 175px;
-            height: 35px;
-            margin: 5px 0px;
-            color: white;
-            cursor: pointer;
-        }
-    }
+        margin: 30px 0px;
+       button{
+           background-color: #1ABC9C;
+           border: 0px;
+           border-radius: 35px;
+           width: 175px;
+           height: 35px;
+           margin: 5px 0px;
+           color: white;
+           cursor: pointer;
+       }
+   }
     #chamados{
         flex-direction: column;
         width: 310px;
