--- a/app/style.scss
+++ b/app/style.scss
@@ -108,6 +108,12 @@ main{
             margin: 5px 0px;
         }
     }
+    .pop-up{
+        display: none;
+        ul{
+            list-style: none;
+        }
+    }
 }
 
 footer{
