--- a/app/style.css
+++ b/app/style.css
@@ -7,8 +7,13 @@
 header .header-container {
   display: flex;
   align-items: center;
-  justify-content: center;
-  background-color: #112227;
+  justify-content: space-around;
+  flex-direction: row-reverse;
+  background-color: #1E3D47;
+}
+header .header-container #menu {
+  height: 25px;
+  width: 27px;
 }
 header .header-container h1 {
   color: #1ABC9C;
